@startuml asymmetrical perspective CD


package "Asymmetrical Perspective" {

    ' Enum usedd to deine the target perspective
    enum PerspectiveProfile
    {
        Human
        Cat
    }

    interface IPerspectiveManager
    {
        + void ApplyPerspective(PerspectiveProfile profile)
    }

    class PerspectiveManager<MonoBehaviour> implements IPerspectiveManager
    {
        - BaseAsymProperty[] _asymProperties
    }

    !include AsymmetricalPropertyCD.puml

    PerspectiveProfile <- PerspectiveManager 
    PerspectiveManager --> base
    PerspectiveProfile <-- base
}
@enduml